<resources>
    <string name="app_name">CajaRapida</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarme</string>
    <string name="developer">Developer with ❤️ by Herschel González</string>
    <string name="buscar">Buscar producto</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registro">Registrarme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ventas">Ventas</string>
    <string name="productos">Productos</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="nuevoProducto">Agregar nuevo</string>
    <string name="filtro">Filtrar por fecha</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="fecha_de_fin">Fecha de fin</string>
    <string name="buscarEstadistica">Buscar</string>


</resources>