<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.herschel.cajarapida.view.login.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="15sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="88dp"
            />
    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp">

    </Space>

    <EditText

        android:id="@+id/correo"
        android:layout_width="338dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:hint="@string/correo"
        android:paddingTop="85dp"
        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp">

    </Space>

    <EditText


        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="338dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:paddingTop="85dp"

        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </Space>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:background="@color/yellowApp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="338dp"
        android:layout_height="wrap_content">

    </Button>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </Space>

    <Button

        android:id="@+id/registro"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:text="@string/register"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:textColor="@color/black"
        android:textStyle="italic"
        android:paddingTop="293dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/developer">

    </TextView>


</LinearLayout>





