<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.herschel.cajarapida.view.home.HomeActivity"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="88dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="122dp">

    </Space>

    <EditText

        android:id="@+id/rNombre"
        android:layout_width="338dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:hint="@string/nombre"
        android:paddingTop="85dp"
        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp">

    </Space>

    <EditText

        android:id="@+id/rApellido"
        android:layout_width="338dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:hint="@string/apellido"
        android:paddingTop="85dp"
        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp">

    </Space>

    <EditText

        android:id="@+id/rCorreo"
        android:layout_width="338dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:hint="@string/correo"
        android:paddingTop="85dp"
        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp">

    </Space>

    <EditText


        android:id="@+id/rPassword"
        android:hint="@string/password"
        android:layout_width="338dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:paddingTop="85dp"

        android:paddingBottom="35dp"
        android:textColor="@android:color/black">

    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp">

    </Space>

    <Button
        android:id="@+id/rRegistro"
        android:text="@string/registro"
        android:background="#FBE646"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="338dp"
        android:layout_height="wrap_content">

    </Button>



</LinearLayout>
